Trying to fix header on mobile devices with a notch

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -26,7 +26,7 @@
 
 .welcomeMessage {
   font-size: 2rem;
-
+  padding-top: 10px;
   color: var(--text-color-light);
 }
 
@@ -77,8 +77,8 @@
   }
 
   .logoContainer img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 100% !important;
+    max-height: 100% !important;
   }
 
   .layoutContainer {
