--- a/src/components/ModeToggle.module.css
+++ b/src/components/ModeToggle.module.css
@@ -12,7 +12,7 @@
     text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 0;
+    z-index: 3;
 }
 
 .iconButton {
